Added new endpoint for creating jobs
