# docs/swagger.json
@@ -3,31 +3,7 @@
     "info": {
         "contact": {}
     },
-    "basePath": "/api/v1",
     "paths": {
-        "/hello": {
-            "get": {
-                "description": "do thing",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "my_example"
-                ],
-                "summary": "hello world example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.Body"
-                        }
-                    }
-                }
-            }
-        },
         "/jobs": {
             "get": {
                 "description": "Gets all jobs ordered by priority",
@@ -52,22 +28,55 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Creates jobs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Jobs"
+                ],
+                "summary": "Create jobs",
+                "parameters": [
+                    {
+                        "description": "An array of Job descriptions",
+                        "name": "jobDescriptions",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.Job"
+                            }
+                        }
+                    }
+                }
             }
         }
     },
     "definitions": {
-        "main.Body": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "main.Job": {
             "type": "object",
             "properties": {
                 "description": {
+                    "type": "string"
+                },
+                "finished_at": {
                     "type": "string"
                 },
                 "id": {
